# rust-gha-workflows

./: Cargo.toml  README.md
.github/workflows/: complete-ci.yml  minimal-ci.yml
benches/: example.rs
